--- a/home.html
+++ b/home.html
@@ -47,7 +47,8 @@
             </li>
           </ul>
 
-          <form class="d-flex" role="search" action="https://www.google.com/maps/@-7.8475804,-53.5728367,2268m/data=!3m1!1e3?entry=ttu" method="GET">
+          <form class="d-flex" role="search" action="https://www.google.com/maps/@-7.8475804,-53.5728367,2268m/data=!3m1!1e3?entry=ttu" method="GET" 
+            target="_blank">
             <input class="form-control me-2" type="search" name="q" placeholder="Denuncie" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Buscar</button>
           </form>
